made the features section

--- a/just/src/index.css
+++ b/just/src/index.css
@@ -4,6 +4,8 @@
 :root {
   --cool-sky: #70BAFF;
   --azure-blue: #007EF5;
+  --pale-sky: #D6EBFF;
+  --alice-blue: #EBF5FF;
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
