add routing and new pages for website monitoring

--- a/just/src/index.css
+++ b/just/src/index.css
@@ -6,6 +6,7 @@
   --azure-blue: #007EF5;
   --pale-sky: #D6EBFF;
   --alice-blue: #EBF5FF;
+  --berry-crush: #AA4465;
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
